[gd_scene load_steps=4 format=3 uid="uid://c5158mstpehjy"]

[ext_resource type="PackedScene" uid="uid://bs3hhgqxuc7a8" path="res://incrementor/increment_label.tscn" id="1_3w8lr"]
[ext_resource type="Script" path="res://somethingBeautiful/ButtonChangeTextThing.gd" id="2_skksw"]

[sub_resource type="Theme" id="Theme_uesxj"]

[node name="Main" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0156863, 0.666667, 0.631373, 1)
metadata/_edit_lock_ = true

[node name="Label" parent="." instance=ExtResource("1_3w8lr")]
offset_left = 735.0
offset_top = 501.0
offset_right = 781.0
offset_bottom = 549.0

[node name="Label2" parent="." instance=ExtResource("1_3w8lr")]
offset_left = 733.0
offset_top = 538.0
offset_right = 779.0
offset_bottom = 586.0

[node name="MenuButton" type="MenuButton" parent="."]
offset_left = -240.0
offset_top = -293.0
offset_right = -60.0
offset_bottom = -101.0

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 69.0
offset_top = -159.0
offset_right = 83.0
offset_bottom = -139.0

[node name="ButtonChangeTextThing" type="Node2D" parent="."]
script = ExtResource("2_skksw")

[node name="LineEdit" type="LineEdit" parent="ButtonChangeTextThing"]
offset_left = 826.0
offset_top = 498.0
offset_right = 893.062
offset_bottom = 529.0
theme = SubResource("Theme_uesxj")
placeholder_text = "#"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ButtonChangeTextThing"]
offset_left = 942.0
offset_top = 478.0
offset_right = 1129.0
offset_bottom = 612.0

[node name="Label3" type="Label" parent="ButtonChangeTextThing"]
offset_left = 844.0
offset_top = 552.0
offset_right = 884.0
offset_bottom = 578.0
text = "#"

[node name="Arena 1" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Arena 1"]
offset_left = 80.0
offset_top = 286.0
offset_right = 178.0
offset_bottom = 326.0
color = Color(0.568627, 0.568627, 0.568627, 1)

[node name="ColorRect" type="ColorRect" parent="Arena 1"]
offset_left = 192.0
offset_top = 21.0
offset_right = 1116.0
offset_bottom = 192.0
color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="GameA1R" type="Label" parent="Arena 1"]
offset_left = 84.0
offset_top = 241.0
offset_right = 124.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "77"
horizontal_alignment = 1

[node name="GameA1R" type="Label" parent="Arena 1/GameA1R"]
offset_left = -4.0
offset_top = 42.0
offset_right = 36.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "53"
horizontal_alignment = 1

[node name="GameA1R" type="Label" parent="Arena 1/GameA1R/GameA1R"]
offset_left = 28.0
offset_top = -3.0
offset_right = 68.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1

[node name="GameA1B" type="Label" parent="Arena 1/GameA1R"]
offset_left = 51.0
offset_top = 42.0
offset_right = 91.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "20"
horizontal_alignment = 1

[node name="GameA1B" type="Label" parent="Arena 1"]
offset_left = 134.0
offset_top = 241.0
offset_right = 174.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "77"
horizontal_alignment = 1

[connection signal="text_submitted" from="ButtonChangeTextThing/LineEdit" to="ButtonChangeTextThing" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="ButtonChangeTextThing/Button" to="ButtonChangeTextThing" method="_on_button_pressed"]
